fix form alignment

--- a/assets/css/common-style.css
+++ b/assets/css/common-style.css
@@ -46,3 +46,4 @@
 }
 
 .top-n-40 {top: -40px !important;}
+.top-n-65 {top: -65px !important;}
